[package]
name = "tncurl"
version = "0.1.0"
edition = "2021"

[dependencies]
client-util = { version = "0.1.1", no-default-features = true, features = [
    "json",
] }
http = "1.1.0"
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = [
    "time",
    "macros",
    "fs",
    "bytes",
    "signal",
    "rt-multi-thread",
    "rt",
] }
tonic = { version = "0.11.0", git = "https://github.com/hyperium/tonic" }
tower = "0.4.13"
